syntax = "proto3";
package inquiry.toolkit.rna_quantification.schemas;
import "bq_table_name.proto";

// Forked from https://github.com/ga4gh/ga4gh-schemas,
// see https://github.com/ga4gh/ga4gh-schemas/blob/master/LICENSE

enum ExpressionUnit {
  EXPRESSION_UNIT_UNSPECIFIED = 0;
  FPKM = 1;
  TPM = 2;
}

message RnaQuantificationSet {
  string id = 1;
  string dataset_id = 2;
  string name = 3;
  Attributes attributes = 4;
}

message RnaQuantification {
  string id = 1;
  string name = 2;
  string biosample_id = 8;
  string description = 3;
  repeated string read_group_ids = 4;
  repeated Program programs = 5;
  repeated string feature_set_ids = 6;
  string rna_quantification_set_id = 7;
  Attributes attributes = 9;
}

message ExpressionLevel {
  string id = 1;
  string name = 2;
  string rna_quantification_id = 4;
  float raw_read_count = 5;
  float expression = 6;
  bool is_normalized = 7;
  ExpressionUnit units = 8;
  float score = 9;
  float conf_interval_low = 10;
  float conf_interval_high = 11;
  Attributes attributes = 12;
}

message DiffExpressionLevel {
  option (gen_bq_schema.table_name) = "differential_expression";
  string id = 1;
  string geneid = 2;
  string gene = 3;
  string locus = 4;
  string sample1 = 5;
  string sample2 = 6;
  string status = 7;
  float expression1 = 8;
  float expression2 = 9;
  float lnFoldChange = 10;
  float testStatistic = 11;
  float pValue = 12;
  float qValue = 13;
  bool significant = 14;
}
